--- a/cms/app/views/dm_cms/admin/cms_pages/edit.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/edit.html.erb
@@ -1,1 +1,2 @@
+<% content_for :content_title, icon_label('font-paste', present(@current_page).admin_edit_title) %>
 <%= render :partial => 'form' %>
