--- a/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :content_title, icon_label('font-paste', 'Pages') %>
+
 <%= render :partial => 'index_sidebar' %>
 
 <div class="block well">
