--- a/cms/app/views/dm_cms/admin/cms_pages/new_page.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/new_page.html.erb
@@ -1,2 +1,3 @@
+<%# title = (new_record ? "New Child for: " : "Editing Page: ") %>
+<% content_for :content_title, icon_label('font-paste', 'New Child Page for: '.html_safe + present(@current_page).admin_edit_title) %>
 <%= render :partial => 'form' %>
-  
