--- a/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
@@ -1,7 +1,20 @@
+<% unless @post.new_record? %>
+  <% content_for :content_title, h(@post.title) + content_tag(:small, @blog.title) %>
+  <% content_for :content_title_extra do %>
+    <div class='navbar'><ul class='nav pull-right'>
+      <li><%= present(@post).label_published %></li>
+      <li><%= link_to(icon_label('icon-search', 'View'), post_show_url(@blog, @post), :class => "nav-btn-primary", title: 'View', :target => '_blank') %></li>
+      <li><%= link_to(icon_label('icon-trash', 'Delete'), [:admin, @post], :method => :delete, :class => "nav-btn-danger", :confirm => 'Are you sure you wish to delete this post?  All comments will also be deleted!') %></li>
+    </ul></div>
+  <% end %>
+<% else %>
+  <% content_for :content_title, @blog.title %>
+<% end %>
+
 <% submit_url = (@post.new_record? ? admin_cms_blog_cms_posts_path(@blog) : admin_cms_post_path) %>
 <%= simple_form_for(@post, :url => submit_url) do |f| %>
   <%= f.error_notification :message => "Please review the problems below" %>
-  <%= content_box :title => @title do %>
+  <%= content_box do %>
     <div class="form-horizontal control-group string required">
       <label class="string required control-label" for="post_starting_on">
         <abbr title="required">*</abbr> Publish on
@@ -38,9 +51,9 @@
 <% unless @post.new_record? %>
   <% content_for :sidebar do %>
     <% if @post.notification_sent_on.nil? %>
-      <%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), :class => "action-button btn-primary", :confirm => 'This will send a post notification email to each user of this blog.  Are you sure?' %>
+      <%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), :class => "action-button btn-primary semi-block", :confirm => 'This will send a post notification email to each user of this blog.  Are you sure?' %>
     <% else %>
-      <%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), :class => "action-button btn-warning", :confirm => "WARNING: An emal was already sent on #{format_datetime(@post.notification_sent_on)}.  Are you sure you want to send another?" %>
+      <%= link_to 'Send Notification Emails', send_notifications_emails_admin_cms_post_path(@post), :class => "action-button btn-warning semi-block", :confirm => "WARNING: An email was already sent on #{format_datetime(@post.notification_sent_on)}.  Are you sure you want to send another?" %>
     <% end %>
   <% end %>
 <% end %>
