--- a/event/app/views/dm_event/admin/registrations/_form.html.erb
+++ b/event/app/views/dm_event/admin/registrations/_form.html.erb
@@ -3,6 +3,7 @@
   <div class='navbar'>
     <ul class='nav pull-right'>
       <li><%= present(@registration).admin_status_label %></li>
+      <li><%= link_to(icon_label('icon-trash', 'Delete'), [:admin, @registration], :method => :delete, :class => "nav-btn-danger", :confirm => 'Are you sure you wish to delete this registration?  Any associated payments will also be deleted!') %></li>
     </ul>
   </div>
 <% end %>
