--- a/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_blogs/_form.html.erb
@@ -9,6 +9,9 @@
     <%= f.input :published, :as => :toggle, :label => 'Publish It?' %>
     <%= f.input :is_public, :as => :toggle, :label => 'Make Blog Public?', :hint => 'This will allow anyone to see the blog.  Use option below to restrict to registered users' %>
     <%= f.input :requires_login, :as => :toggle, :label => 'Public Requires Login?', :hint => 'If this is a public blog, user must be logged in to see it.  (All private blogs automatically require login)' %>
+    <% if defined? DmSubscriptions %>
+      <%= f.input :requires_subscription, :as => :toggle, :label => 'Subscription Required?', :hint => 'User must have a paid subscription to access' %>
+    <% end %>
     <%= f.input :comments_allowed, :as => :toggle, :label => 'Allow Comments', :hint => 'Controls whether commenting is allowed for this blog.  If on, then each post can decided whether to allow comments' %>
     <%= f.input :preferred_show_social_buttons, :as => :toggle, label: 'Show social buttons', hint: 'This setting will be ignored for private blogs' %>
     <%= f.input :image, :label => 'Header Image', hint: 'An image for the entire blog' %>
