--- a/forum/app/views/dm_forum/forum_topics/edit.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/edit.html.erb
@@ -1,3 +1,4 @@
+<% content_for :page_title, @forum.forum_category.name %>
 <% content_for :sidebar do %>
   <%= render :partial => "dm_forum/forum_comments/formatting" %>
 <% end %>
@@ -7,26 +8,6 @@
 <%= render(:partial => 'dm_forum/forums/forum_header', :object => @forum, :as => :forum) %>
 
 <h1 id="new_topic"><%= I18n.t 'fms.edit_topic' %></h1>
-<p class="subtitle"></p>
+<p class="subtitle"><%= I18n.t 'fms.by_user', :user => current_user.display_name %></p>
 
-<%= simple_form_for [@forum, @forum_topic] do |f| %>
-
-  <%= f.error_notification :message => "Please review the problems below"%>
-  <%= f.input :title, :label => I18n.t('fms.views_topics.topic') %>
-
-  <% if is_admin? && (forums = ForumSite.site.ordered_forums).length > 1 %>
-    <%= f.input :forum_id, collection: forums, label_method: :name, value_method: :id %>
-  <% end %>
-
-  <% if can? :moderate, @forum %>
-    <div class="clearfix">
-      <%= f.input :sticky, :label => "<i class='icon-pushpin'></i> #{I18n.t('fms.sticky')}".html_safe %>
-    </div>
-    <div class="clearfix">
-      <%= f.input :locked, :label => "<i class='icon-lock'></i> #{I18n.t('fms.locked')}".html_safe %>
-    </div>
-  <% end %>
-
-  <%= submit_or_cancel :save => I18n.t('fms.post_topic'),
-        :cancel_url => [@forum] %>
-<% end %>
+<%= render :partial => "form" %>
