--- a/forum/app/views/dm_forum/forum_topics/_comment_item.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/_comment_item.html.erb
@@ -9,7 +9,7 @@
     <%= present(comment_item).date_posted %>
     <% edited = edited_on_tag(comment_item) %>
     <%= " | #{edited}".html_safe if edited %>
-    <%= ' | '.html_safe + link_to(I18n.t 'fms.reply', '#reply') unless @forum_topic.locked? || !user_signed_in? %>
+    <%= ' | '.html_safe + link_to(I18n.t('fms.reply'), '#reply') unless @forum_topic.locked? || !user_signed_in? %>
     <% if user_signed_in? && can?(:edit, comment_item) %>
     | 
       <%= link_to I18n.t('fms.admin.edit_post'), edit_forum_forum_topic_forum_comment_path(@forum, @forum_topic, comment_item), :class => 'utility' %>
