--- a/forum/app/views/dm_forum/forum_topics/_comments_list.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/_comments_list.html.erb
@@ -1,39 +1,63 @@
 <a name="<%= dom_id @forum_comments.first %>" id="<%= dom_id @forum_comments.first %>">&#xA0;</a>
 
-<% if @forum_comments.first.is_root? %>
+<div id="comment_section">
+  <% if @forum_comments.first.is_root? %>
+    <div class="comments clearfix">
+      <ul class="comment_list first_comment">
+        <%= render(:partial => 'comment_item', object: @forum_comments.first) %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div class="comment_section_header">
+    <div class="num_comments"> <%= "#{@forum_comments.count - 1} #{I18n.t 'cms.comments_stat'}" %></div>
+    <% if user_signed_in? and !@forum_topic.locked? %>
+      <div class="reply_link"><%= link_to I18n.t('fms.reply_to_topic'), "#reply" %></div>
+    <% end %>
+    <div class="comment_pagination"><%= pagination(@forum_comments) %></div>
+  </div>
+
+
   <div class="comments clearfix">
-    <ul class="comment_list first_comment">
-      <%= render(:partial => 'comment_item', object: @forum_comments.first) %>
+    <ul class="comment_list">
+      <% for forum_comment in @forum_comments do %>
+        <%= render(:partial => 'comment_item', object: forum_comment) unless forum_comment.is_root? %>
+      <% end %>
+      <% if current_user %>
+        <li class="clearfix" id="reply">
+          <% if !@forum_topic.locked? %>
+            <div class="user"><%= avatar_for current_user, 50 %></div>
+            <div class="reply_field">
+              <%= simple_form_for [@forum, @forum_topic, @forum_topic.forum_comments.new] do |f| %>
+                <%= f.text_area :body, rows: 5, placeholder: I18n.t('cms.add_comment') %>
+                <div class="comment_formatting_hint">
+                  <%= nls :comment_extra_instruction %>
+                  <%= I18n.t('fms.comment_notification_inform')%>
+                </div>
+                <%= f.submit I18n.t('fms.views_topics.save_reply'), class: 'btn btn-primary' %>
+              <% end %>
+            </div>
+          <% end %>
+        </li>
+      <% end %>
     </ul>
+  </div>
+
+<% if @forum_topic.locked? %>
+  <div class="topic_locked_message">
+    <p class="topic_locked"><%= I18n.t 'fms.views_topics.locked_topic' %></p>
+  </div>
+<% elsif !current_user %>
+  <p><%= I18n.t 'cms.comment_login_required' %></p>
+  <div class="login_required_buttons">
+    <%= link_to I18n.t('core.login'), main_app.new_user_session_path, class: 'btn btn-primary' %>
+    <%= link_to I18n.t('core.create_account'), main_app.new_user_registration_path, class: 'btn'  %>
   </div>
 <% end %>
 
-<h3 style="text-transform: uppercase"><%= I18n.t 'fms.comments_header' %></h3>
 
-<%= pagination(@forum_comments) %>
-
-<% if user_signed_in? and !@forum_topic.locked? %>
-  <p><%= link_to I18n.t('fms.reply_to_topic'), "#reply" %></p>
-<% end %>
-
-<div class="comments clearfix">
-  <ul class="comment_list">
-    <% for forum_comment in @forum_comments do %>
-      <%= render(:partial => 'comment_item', object: forum_comment) unless forum_comment.is_root? %>
-    <% end %>
-  </ul>
+  <div class="comment_section_footer">
+    <div class="comment_pagination"><%= pagination(@forum_comments) %></div>
+  </div>
 </div>
-
-<%= pagination(@forum_comments) %>
-
 <div class="clear"></div>
-<script type='text/javascript'><!--//--><![CDATA[//><!--
-// if (history && history.replaceState && $$('.pagination')) {
-//   $$('.pagination a').invoke('observe', 'click', function(){
-      <%#= p = {'page' => params[:page].to_i} if params[:page]
-       modify_history('pushState', @forum_topic.title, "#{@forum_topic.slug}.html", p) %>
-//   });
-//   $$('.pagination a').invoke('writeAttribute','data-remote');
-//   $$('.edit a.utility').invoke('writeAttribute','data-remote');
-// };
-//--><!]]></script>
