anonymize google analytics IP

--- a/cms/app/views/customized/analytics/_google_analytics.html.erb
+++ b/cms/app/views/customized/analytics/_google_analytics.html.erb
@@ -5,6 +5,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', '<%= tracking_id %>', '<%= domain_name %>');
+  ga('set', 'anonymizeIp', true);
   ga('send', 'pageview');
 
 </script>
