--- a/newsletter/app/views/dm_newsletter/admin/newsletters/show.html.erb
+++ b/newsletter/app/views/dm_newsletter/admin/newsletters/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :content_title, "#{@newsletter.name} <small>Newsletter</small>".html_safe %>
 <% content_for :content_title_extra do %>
   <div class='navbar'><ul class='nav pull-right'>
-    <li><%= link_to(icon_label('icon-trash', 'Delete'), admin_newsletter_path(@newsletter), :method => :delete, :class => "nav-btn-danger", :confirm => 'Are you sure you wish to delete this newsletter?') %></li>
+    <li><%= link_to(icon_label('icon-trash', 'Delete'), admin_newsletter_path(@newsletter), method: :delete, class: "nav-btn-danger", data: {confirm: 'Are you sure you wish to delete this newsletter?'}) %></li>
   </ul></div>
 <% end %>
 
