--- a/forum/app/views/dm_forum/forum_topics/_follow_button.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/_follow_button.html.erb
@@ -1,3 +1,3 @@
 <% button_title = following ? I18n.t('fms.follow_stop') : I18n.t('fms.follow') %>
 <% follow_class = following ? 'btn btn-default btn-small follow_active' : 'btn btn-default btn-small' %>
-<%= button_to button_title, forum_forum_topic_toggle_follow_path(@forum, @forum_topic.id), remote: true, id: 'follow_button', class: follow_class %>
+<%= button_to button_title, forum_forum_topic_toggle_follow_path(@forum, @forum_topic.id), remote: true, method: :patch, id: 'follow_button', class: follow_class %>
