--- a/forum/app/views/dm_forum/forum_topics/show.html.erb
+++ b/forum/app/views/dm_forum/forum_topics/show.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :sidebar do %>
 
-  <%= render(:partial => 'dm_forum/forum_topics/follow_button', :object => @following, :as => :following) if current_user %>
+  <%= render(partial: 'dm_forum/forum_topics/follow_button', locals: {following: @following} ) if current_user %>
   <div class="clear"></div>
   <div class="forum_sidebar_voices">
     <h5><%= I18n.t 'fms.voices' %></h5>
@@ -18,7 +18,7 @@
 
 <div class="comment_section" id="comment_section">
 
-  <%= render(:partial => 'dm_forum/forums/forum_header', :object => @forum_topic.forum, :as => :forum) %>
+  <%= render(partial: 'dm_forum/forums/forum_header', object: @forum_topic.forum, as: :forum) %>
 
   <h1 id="topic_title">
     <%= @forum_topic.title %>
@@ -28,9 +28,9 @@
     <% if user_signed_in? %>
       <% if can? :edit, @forum_topic %>
         <span id="topic_mod">
-          <%= link_to(I18n.t('fms.edit'), edit_forum_forum_topic_path(@forum, @forum_topic), :class => "utility") %>
+          <%= link_to(I18n.t('fms.edit'), edit_forum_forum_topic_path(@forum, @forum_topic), class: "utility") %>
           <% if is_admin? %>
-            | <%= link_to(I18n.t('fms.delete'), forum_forum_topic_path(@forum, @forum_topic), :class => "utility", :method => :delete, :confirm => I18n.t('fms.views_topics.delete_sure')) %>
+            | <%= link_to(I18n.t('fms.delete'), forum_forum_topic_path(@forum, @forum_topic), class: "utility", method: :delete, data: {confirm: I18n.t('fms.views_topics.delete_sure')}) %>
           <% end %>
         </span>
       <% end %>
@@ -38,12 +38,12 @@
   </h1>
 
   <p class="subtitle">
-    <%= I18n.t 'fms.count_comments', :count => @forum_topic.forum_comments.size - 1, 
-              :num => number_with_delimiter(@forum_topic.forum_comments.size - 1) %>,
-    <%= I18n.t 'fms.count_voices', :count => @forum_topic.voices.size, 
-              :num => number_with_delimiter(@forum_topic.voices.size) %>
+    <%= I18n.t 'fms.count_comments', count: @forum_topic.forum_comments.size - 1, 
+              num: number_with_delimiter(@forum_topic.forum_comments.size - 1) %>,
+    <%= I18n.t 'fms.count_voices', count: @forum_topic.voices.size, 
+              num: number_with_delimiter(@forum_topic.voices.size) %>
   </p>
 
-  <%= render(:partial => 'comments_list') unless @forum_comments.empty?%>
+  <%= render(partial: 'comments_list') unless @forum_comments.empty?%>
 
 </div>
